<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imgRegister"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/signup_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgRegister"
            android:layout_marginTop="15dp"
            android:text="@string/labelRegister"
            android:textColor="@color/black"
            android:textFontWeight="900"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/labelWelcome"
            android:text="@string/labelRegisterWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelLogin"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFullnameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/labelWelcome"
            android:layout_marginTop="15dp"
            android:hint="@string/hintFullname"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textMobileNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textFullnameLayout"
            android:layout_marginTop="15dp"
            android:hint="@string/hintMobileNumber"
            app:startIconDrawable="@drawable/ic_mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textMobileNumberLayout"
            android:layout_marginTop="15dp"
            android:hint="@string/hintEmailAddress"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textEmailLayout"
            android:layout_marginTop="15dp"
            android:hint="@string/hintPassword"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textConfirmPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textPasswordLayout"
            android:layout_marginTop="15dp"
            android:hint="@string/hintConfirmPassword"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textConfirmPasswordLayout"
            android:layout_marginTop="15dp"
            android:backgroundTint="#B113EA"
            android:text="@string/textBtnRegister"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintBottom_toTopOf="@id/layoutRegisterFooter"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:id="@+id/layoutRegisterFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressIndicator"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/labelMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelRegisterMember"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/btnNavigateLogin"
                android:text="@string/textBtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#B113EA"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

